Obsah vozíku po kliknutí

--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,7 @@
             <fileset file="data/sample.fxml"/>
             <fileset file="data/help.fxml"/>
             <fileset file="data/newpozadavek.fxml"/>
+            <fileset file="data/obsahVoziku.fxml"/>
         </jar>
     </target>
 
